--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div class="container">
         <header>
+            <img src="logo.png" alt="Islamic Logo" class="logo">
             <h1>Sunnah at Your Door Step</h1>
             <p>Your gateway to Islamic knowledge</p>
         </header>
 
         <div class="book-list">
-            <h2>Available Books</h2>
+            <h2>Available Books more are coming soon........</h2>
             <ul>
                 <li><a href="https://drive.google.com/file/d/15ulBAFmgQGh5c_yCvqAne0tpyiXkiEQ2/view?usp=drive_link" target="_blank">Sahih Bukhari</a> <button onclick="downloadBook('https://drive.google.com/file/d/15ulBAFmgQGh5c_yCvqAne0tpyiXkiEQ2/view?usp=drive_link')">Download</button></li>
                 <li><a href="https://drive.google.com/file/d/1QuXgm51e1HVTIAAZiqJnxv98IzaK4rBw/view?usp=drive_link" target="_blank">Sahih Muslim</a> <button onclick="downloadBook('https://drive.google.com/file/d/1QuXgm51e1HVTIAAZiqJnxv98IzaK4rBw/view?usp=drive_link')">Download</button></li>
