--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <li><a href="https://drive.google.com/file/d/1SF-h-y-fliqDv0iVQ9IeKAYPG0iUCKZh/view?usp=drive_link" target="_blank">Sunan Nasa'i</a> <button onclick="downloadBook('https://drive.google.com/file/d/1SF-h-y-fliqDv0iVQ9IeKAYPG0iUCKZh/view?usp=drive_link')">Download</button></li>
                 <li><a href="https://drive.google.com/file/d/1IhcafohyKL5O25rEy-0XJkl148Ay1-cv/view?usp=drive_link" target="_blank">Sunan Ibn Majah</a> <button onclick="downloadBook('https://drive.google.com/file/d/1IhcafohyKL5O25rEy-0XJkl148Ay1-cv/view?usp=drive_link')">Download</button></li>
                 <li><a href="https://drive.google.com/file/d/1UtwNhCqGyQzPMBZeg0z7SY8wQBbmF385/view?usp=drive_link" target="_blank">Sunan Tirmithi</a> <button onclick="downloadBook('https://drive.google.com/file/d/1UtwNhCqGyQzPMBZeg0z7SY8wQBbmF385/view?usp=drive_link')">Download</button></li>
+                <li><a href="https://drive.google.com/file/d/14a40J1KuRbu4IISccm77TDE13KejkHFs/view?usp=drive_link" target="_blank">Alkuarnil Karim</a> <button onclick="downloadBook('https://drive.google.com/file/d/14a40J1KuRbu4IISccm77TDE13KejkHFs/view?usp=drive_link')">Download</button></li>
+                <li><a href="https://drive.google.com/file/d/1NcyaAqG2AnFq9eEAXAN6j-Z_wB8cg-QT/view?usp=drive_link" target="_blank">Mawadda Mukaddima</a> <button onclick="downloadBook('https://drive.google.com/file/d/1NcyaAqG2AnFq9eEAXAN6j-Z_wB8cg-QT/view?usp=drive_link')">Download</button></li>
+                <li><a href="https://drive.google.com/file/d/1WHxlrcDdCLtQfK1ZaQ8RjqrgjsnCT4Z1/view?usp=drive_link" target="_blank">Mawadda Book 2</a> <button onclick="downloadBook('https://drive.google.com/file/d/1WHxlrcDdCLtQfK1ZaQ8RjqrgjsnCT4Z1/view?usp=drive_link')">Download</button></li>
+                <li><a href="https://drive.google.com/file/d/1LRyPM1K1ctB3Fl87HEskhzAuQaIe-AO1/view?usp=drive_link" target="_blank">Mawadda Book 3</a> <button onclick="downloadBook('https://drive.google.com/file/d/1LRyPM1K1ctB3Fl87HEskhzAuQaIe-AO1/view?usp=drive_link')">Download</button></li>
+                <li><a href="https://drive.google.com/file/d/1yf99KbJm1sZkCcLTMToFTO16Fd5I6tN0/view?usp=drive_link" target="_blank">Mawadda Book 4</a> <button onclick="downloadBook('https://drive.google.com/file/d/1yf99KbJm1sZkCcLTMToFTO16Fd5I6tN0/view?usp=drive_link')">Download</button></li>
+                
             </ul>
         </div>
 
